Ensure that overflow inside items is handled correctly

--- a/src/scss/common/questions.scss
+++ b/src/scss/common/questions.scss
@@ -175,12 +175,21 @@ button {
       }
     }
 
-    .parsons-item > * {
+    .parsons-item > pre {
       margin: 0.5rem 0;
       padding: 0.5em 1em;
       cursor: grab; // Doesn't work?
-      background: white;
-      border: solid 1px #00000021;
+    }
+
+    .reorder-item {
+      > * {
+        overflow-x: auto;
+        margin: 0.5rem 0;
+        padding: 0.5em 1em;
+        cursor: grab;
+        background: white;
+        border: solid 1px #00000021;
+      }
     }
 
     // REMINDER: If you change the PARSONS_MAX_INDENT and PARSONS_INDENT_STEP
